# LOATS13July2026

./: .clineignore  .clinerules  .coveragerc  .env.example  .env.test  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  00-MASTER-PLAN-LITE.md  DEPLOY.md  DUPLICATE_SETTINGS_RESOLUTION_REPORT.md  Dockerfile  EXPIRED_CONTRACT_FIX_REPORT.md  FINAL_QUALITY_GATE_REPORT.md  FINAL_REPORT.md  NEW-H1_EXCEPTION_CHAINING_FIX_REPORT.md  NEW_L1_INIT_ALL_FIX_REPORT.md  NEW_L2_SETTINGS_LAZY_INIT_FIX_REPORT.md  NEW_L3_RAW_SQL_FALSE_POSITIVE_REPORT.md  NEW_M5_DATABASE_DI_FIX_REPORT.md  P1_CORRECTNESS_SAFETY_REPORT.md  PRINCIPAL_ENGINEERING_FINAL_REPORT.md  PRODUCTION_READINESS_FINAL_REPORT.md  PRODUCTION_READINESS_VERIFICATION_REPORT.md  README.md  RUFF_EXPLICIT_FILE_EXCLUSION_REPORT.md  RUNBOOK.md  SECURITY_REMEDIATION_REPORT.md  VERIFICATION_RESULTS.md  check_bytes.py  check_openalgo.py  check_parse.py  check_syntax.py  cov_output.txt  coverage.json  debug_openalgo.py  docker-compose.yml  final_pytest.txt  fix_alerts.py  fix_assertions.py  (+17 more)
.github/workflows/: ci.yml  security.yml
scripts/: check_function_size.py
src/: adapters.py  modules.py  orchestrator.py  risk.py  rules.py  strength.py  strike.py
src/loats/: __init__.py  alerts.py  config.py  database.py  initialization.py  logging.py  main.py  models.py  openalgo.py  options.py  scheduler.py  sentiment.py  ta.py
src/loats/config/: __init__.py  _settings.py  settings.py
src/loats/utils/: __init__.py  circuit_breaker.py  nim_rate_guard.py  retry.py
tests/: __init__.py  conftest.py  test_adapters.py  test_alerts.py  test_alerts_coverage.py  test_audit_hash_mutation.py  test_config.py  test_coverage_booster.py  test_database.py  test_final_logging_verification.py  test_logging.py  test_logging_implementation.py  test_main.py  test_main_extended.py  test_minimal_logging.py  test_models.py  test_modules.py  test_openalgo.py  test_options.py  test_orchestrator.py  test_portfolio_greeks.py  test_risk.py  test_rules.py  test_scheduler.py  test_scheduler_extended.py  test_scheduler_full.py  test_sentiment.py  test_sentiment_coverage.py  test_simple_logging.py  test_strength.py  test_strike.py  test_ta.py  test_utils.py  test_vacuum_cleanup.py
