[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loats13july2026"
version = "0.1.0"
description = "Multi-factor, sentiment-driven, rule-based options analysis platform for OpenAlgo ANALYZE mode"
authors = [
    {name = "npmvlKP", email = "npmvlkp@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "vaderSentiment>=3.3.2",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "py_vollib>=1.0.1",
    "ta-lib>=0.4.28",
    "newspaper4k>=0.9.3",
    "psycopg[binary]>=3.1.0",
    "tenacity>=8.2.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.0",
    "tzdata>=2024.1",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "bandit>=1.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pre-commit>=3.6.0",
    "gitleaks>=8.18.0",
    "hypothesis>=6.28.0",
    "pytest-benchmark>=4.0.0",
    "trivy>=0.49.0",
    "cyclonedx-bom>=4.0.0",
    "locust>=2.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["loats"]

[tool.setuptools.package-data]
loats = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "data",
    "logs",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "C90",  # mccabe complexity
    "N",    # pep8-naming
    "D",    # pydocstyle
    "W",    # pycodestyle warnings
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "S101",  # Use of assert detected
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Allow assert in tests
    "D103",  # Missing docstring in public function
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
warn_unreachable = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-branch --cov-fail-under=80 --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/__init__.py",
    "*/tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", "build", "dist"]
skips = ["B101"]  # Allow assert in tests