[project]
name = "loats13july2026"
version = "0.1.0"
description = "Lite OpenAlgo Trading System"
authors = [
    {name = "npmvlKP", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openalgo>=0.1.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "APScheduler>=3.10.0",
    "ta>=0.11.0",
    "py_vollib>=1.0.12",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pandas-stubs>=2.2.0.240625",
    "scipy>=1.13.0",
    "vaderSentiment>=3.3.2",
    "feedparser>=6.0.0",
    "structlog>=23.2.0",
    "python-telegram-bot>=20.7.0",
    "python-dotenv>=1.0.0",
    "newspaper4k>=0.9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loats"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "W", "C90", "I", "N", "UP", "YTT", "ANN", "S", "BLE", "B", "A",
    "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G",
    "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID",
    "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY",
    "RUF"
]
ignore = [
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in classmethod
    "S101",    # Use of assert detected
    "PLR2004", # Magic value used in comparison
    "COM812",  # Trailing comma missing
    "ISC001",  # Implicit string concatenation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN201", "ANN001"]
"src/loats/utils/nim_rate_guard.py" = ["INP001"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "newspaper.*",
    "vaderSentiment.*",
    "apscheduler.*",
    "ta.*",
    "py_vollib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.bandit]
skips = ["B101"]  # Skip assert_used
