[project]
name = "loats13july2026"
version = "0.1.0"
description = "Lite OpenAlgo Trading System"
authors = [
    {name = "npmvlKP", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openalgo>=0.1.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "APScheduler>=3.10.0",
    "ta>=0.11.0",
    "vollib>=1.0.1",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "vaderSentiment>=3.3.2",
    "feedparser>=6.0.0",
    "structlog>=23.2.0",
    "python-telegram-bot>=20.7.0",
    "python-dotenv>=1.0.0",
    "newspaper4k>=0.9.3",
]

[project.optional-dependencies]
dev = [
    "pandas-stubs>=2.2.0.240625",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loats"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint.mccabe]
# §4.1 specifies LOC ≤ 100 per function; cyclomatic complexity max
# set to 20 (pragmatic for trading-domain logic with multiple branches).
# Functions exceeding this should be refactored in later phases.
max-complexity = 20

[tool.ruff.lint]
# Phase-00: Essential rule categories enforced.
# Stylistic-only rules are excluded to keep Phase-00 scaffold green.
# As phases mature, add stricter categories back incrementally.
select = [
    "E",      # pycodestyle errors (syntax, formatting)
    "F",      # pyflakes (undefined names, unused imports/vars)
    "W",      # pycodestyle warnings
    "C90",    # mccabe complexity
    "I",      # isort (import order)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # bugbear (common Python bugs)
    "A",      # builtin shadowing
    "C4",     # unnecessary comprehensions/generators
    "DTZ",    # timezone-aware datetimes (4.1IST compliance)
    "EXE",    # executable file shebangs
    "FA",     # future annotations
    "ICN",    # import conventions
    "INP",    # implicit namespace packages
    "PIE",    # miscellaneous enabled
    "T20",    # flake8-print (4.1print not in src/)
    "PTH",    # use pathlib over os.path
    "PGH",    # pygrep-hooks
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use assert detected (needed in tests)
    "RUF001", # Ambiguous unicode string (false positives in financial symbols)
    "RUF002", # Ambiguous unicode docstring
    "RUF003", # Ambiguous unicode comment
    "RUF005", # Consider iterable unpacking (style preference)
    "RUF006", # Store asyncio.create_task reference (handled at call sites)
    "RUF012", # Mutable class attributes (Pydantic pattern)
    "RUF015", # Prefer next(iter() (readability)
    "RUF022", # __all__ sorting (not applicable)
    "RUF059", # Unpacked variable unused (test readability)
    "N803",   # Argument name lowercase (financial naming: last_price)
    "N806",   # Variable function lowercase (test fixtures)
    "N818",   # Error suffix exceptions (domain naming convention)
    "INP001", # Missing __init__.py (src layout uses namespace)
    "PIE790", # Unnecessary pass statement
    "PGH003", # Use specific rule codes in type:ignore (third-party libs)
    "UP007",  # Use X | Y (Python3.10 target, backward compat)
]

[tool.ruff.lint.per-file-ignores]
# Tests: allow assert, broad exceptions, private access, print, and naive
# datetimes for fixture construction (test isolation, not production paths)
"tests/*" = [
    "S101",   # assert tests
    "DTZ001", # naive datetime() constructor in fixtures
    "DTZ005", # naive datetime.now() in test data setup
    "BLE001", # broad exception in pytest.fail pattern
    "SLF001", # private member access in tests
    "PLC0415",# import outside top-level in fixtures
    "T201",   # print in tests debug output
    "ANN001", # missing type annotation for test params
    "ANN201", # missing return type in test functions
    "ANN202", # missing return type in private test functions
    "PT001",  # pytest.fixture style
    "PT011",  # pytest.raises specificity
    "ARG001", # unused function argument in fixture params
    "PTH123", # open() vs Path.open() in tests
    "PLR0915",# many statements in test
    "E501",   # line too long in test assertions
]

"src/loats/utils/nim_rate_guard.py" = ["INP001"]
"quick_health_check.py" = ["INP001", "T201"]
"setup_project.py" = ["INP001", "T201"]
"scripts/*" = ["INP001", "T201"]

[tool.mypy]
# Runtime pinned to 3.12 in this venv; numpy>=2 ships PEP-695 `type` statements
# in its bundled .pyi which require Python 3.12+ to parse. Keeping this aligned
# with the interpreter avoids spurious syntax errors from third-party stubs.
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "newspaper.*",
    "vaderSentiment.*",
    "apscheduler.*",
    "ta.*",
    "vollib.*",
    "pandas.*",
    "httpx.*",
    "openalgo.*",
]
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.bandit]
skips = ["B101"] # Skip assert_used

[tool.black]
# Pin target to current interpreter (3.12). Without this, recent Black
# defaults to py315 and emits safety-check warnings on a 3.12 host. Line
# length matches Ruff to keep formatting consistent.
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["loats"]
